assert-struct/tests/compile_fail/map_pattern_on_non_map.stderr
error[E0277]: the type `str` cannot be indexed by `&String`
  --> tests/compile_fail/map_pattern_on_non_map.rs:17:18
   |
17 |         name: #{ "key": "value" },
   |                  ^^^^^ string indices are ranges of `usize`
   |
   = help: the trait `SliceIndex<str>` is not implemented for `&String`
note: required by a bound in `core::str::<impl str>::get`
  --> $RUST/core/src/str/mod.rs
   |
   |     pub const fn get<I: [const] SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `core::str::<impl str>::get`

error[E0282]: type annotations needed
  --> tests/compile_fail/map_pattern_on_non_map.rs:16:5
   |
16 | /     assert_struct!(user, User {
17 | |         name: #{ "key": "value" },
18 | |         age: 30,
19 | |     });
   | |______^ cannot infer type
   |
   = note: this error originates in the macro `assert_struct` (in Nightly builds, run with -Z macro-backtrace for more info)
